# amber-ctf-training

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
amber/: app.py  config.py  database.py  deploy.py  models.py  ticks.py
amber/dto/: ctf.py
amber/repository/: chall.py  containers.py  flag.py  team.py
amber/routes/: ctf.py
amber/services/: teams.py
amber/utils/: discord.py  flags.py
src/: app.py  database.py  deploy.py
src/models/: team.py
src/services/: teams.py
