[tool.poetry]
name = "amber-ctf-training"
version = "0.1.0"
description = ""
authors = ["Emyr298 <emi.ru298@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlmodel = "^0.0.21"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
